# tireswap

./: .env  .gitignore  Makefile  README.md  plan.md
.github/workflows/: ci-deploy.yml
backend/: .gitignore  API.md  Cargo.toml  README.md  tireswap.db
backend/src/: analyzer.rs  api.rs  db.rs  lib.rs  main.rs  nearest.rs
backend/src/aggregator/: aggregator.rs  mod.rs
backend/src/db/: db.rs
backend/src/nearest/: mod.rs  nearest.rs
backend/tests/: search_api.rs
deploy/nginx/: tireswap.conf
deploy/systemd/: tireswap-backend.service
frontend/: .env.example  .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/layout/: AppLayout.tsx
frontend/src/pages/: Home.tsx  Results.tsx
scripts/: build_backend.sh  build_frontend.sh  debug_local.sh  deploy_vps.sh  package_release.sh  rollback_vps.sh
