[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde_json = "1.0.145"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
kiddo = "4.2"
chrono = "0.4"
urlencoding = "2.1"
csv = "1.3"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
